# webfuzz

./: README.md  pyproject.toml
gobuster_auto/: main.py
gobuster_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
webfuzz/: main.py
