[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gobuster-auto"
version = "0.1.0"
description = "Automatisation gobuster dir/vhost pour HackTheBox"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gobuster-auto = "gobuster_auto.main:main"

[tool.setuptools.packages.find]
where = ["."]
