[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webfuzz"
version = "0.1.0"
description = "Automatisation gobuster dir/vhost pour HackTheBox"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
webfuzz = "webfuzz.main:main"

[tool.setuptools.packages.find]
where = ["."]
